<resources>
    <string name="app_name">Car Maintenance</string>
    <string name="tab_text_1">Summary</string>
    <string name="tab_text_2">Upcoming</string>
    <string name="tab_text_3">Archive</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_out">Sign Out</string>
    <string name="service_name">Service Name</string>
    <string name="periodicity">Periodicity</string>
    <string name="_1000_km">1000 KM</string>
    <string name="price">Price</string>
    <string name="_20">20$</string>
    <string name="last_time">Last time</string>
    <string name="_555km">555KM</string>
    <string name="update">Update</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="empty_service">Please Don\'t leave the service details empty</string>
    <string name="done">Done</string>
    <string name="_80000km">Enter Distance</string>
    <string name="due_in"> Due in</string>
    <string name="over_due"> Over Due</string>
    <string name="unit">KM</string>
    <string name="unit2">$</string>
    <string name="serviced_at">Serviced At</string>
    <string name="cost">Cost</string>
    <string name="current_distance">Current Distance</string>
    <string name="_0">0</string>
    <string name="number_of_avtive_services">Number of Avtive Services</string>
    <string name="change_photo">Change Photo</string>
    <string name="image_url">Image Url</string>
    <string name="vehicle_image">Car Image of your choice</string>
    <string name="failed">Failed to Load Image</string>
    <string name="loading_image">Loading Image</string>
    <string name="image_loading">Please wait, Downloading Image File</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
